# ml-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.test  MLproject  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.test.txt  template.env
