[build-system]
requires = ["setuptools>=68.2"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
description = "A collection of tools for deep learning powered multimedia projects."
readme = "README.md"
license = { text = "MIT" }
version = "0.1.0"
requires-python = ">=3.8"
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
dependencies = [
  "dvc[all] ~= 3.22.0",
  "ipywidgets ~= 8.1.1",
  "jupyterlab ~= 4.0.5",
  "librosa ~= 0.10.0",
  "lightning[extras] ~= 2.0.8",
  "matplotlib ~= 3.7.2",
  "mlflow ~= 2.7.1",
  "numpy ~= 1.24.4",
  "optuna ~= 3.3.0",
  "torch ~= 2.0.1",
  "torchaudio ~= 2.0.2",
  "torchmetrics ~= 1.2.0",
  "torchvision ~= 0.15.2",
]

[project.urls]
"Homepage" = "{{ cookiecutter.homepage }}"
